tests/fail/nightly/raw_string.stderr
error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:2:33
  |
2 |     sscanf::sscanf!("hi", r"asdf{}asdf");
  |                                 ^^

error: multiple number format options are not allowed
 --> tests/fail/nightly/raw_string.rs:3:36
  |
3 |     sscanf::sscanf!("hi", r"asdf{:bob}asdf", usize);
  |                                    ^

error: multiple number format options are not allowed
 --> tests/fail/nightly/raw_string.rs:4:41
  |
4 |     sscanf::sscanf!("hi", r"asdf{usize:bob}asdf");
  |                                         ^

error: more placeholders than types provided
 --> tests/fail/nightly/raw_string.rs:5:35
  |
5 |     sscanf::sscanf!("hi", r##"asdf{}asdf"##);
  |                                   ^^

error: multiple number format options are not allowed
 --> tests/fail/nightly/raw_string.rs:6:38
  |
6 |     sscanf::sscanf!("hi", r##"asdf{:bob}asdf"##, usize);
  |                                      ^

error: multiple number format options are not allowed
 --> tests/fail/nightly/raw_string.rs:7:43
  |
7 |     sscanf::sscanf!("hi", r##"asdf{usize:bob}asdf"##);
  |                                           ^
